dstar-gateway/tests/compile_fail/spawn_configured_session.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/spawn_configured_session.rs:34:33
   |
34 |     let _ = AsyncSession::spawn(session, socket);
   |             ------------------- ^^^^^^^ expected `Session<_, Connected>`, found `Session<DExtra, Configured>`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected struct `Session<_, dstar_gateway_core::Connected>`
              found struct `Session<dstar_gateway_core::DExtra, dstar_gateway_core::Configured>`
note: associated function defined here
  --> src/tokio_shell/handle.rs
   |
   |     pub fn spawn(session: Session<P, Connected>, socket: Arc<UdpSocket>) -> Self
   |            ^^^^^
